[FIX] few fixes in nav spacing

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,9 @@
 * {
   scroll-behavior: smooth;
 }
+section {
+  scroll-margin-top: 150px;
+}
 
 /* ✅ Custom classes for Gilroy font */
 .gilroy-r {
